# qt-diplom

./: .gitignore  CMakeLists.txt  README.md  REQUIREMENTS_VERIFICATION.md  airport_inspector.db
include/: airportinfo.h  airportloading.h  database.h  flightsearch.h  mainwindow.h  ticketbooking.h  userprofile.h
resources/: resources.qrc
resources/styles/: style.qss
src/: airportinfo.cpp  airportloading.cpp  database.cpp  flightsearch.cpp  main.cpp  mainwindow.cpp  ticketbooking.cpp  userprofile.cpp
ui/: airportinfo.ui  flightsearch.ui  mainwindow.ui  ticketbooking.ui  userprofile.ui
